--- a/octopus-xd/tsconfig.json
+++ b/octopus-xd/tsconfig.json
@@ -7,7 +7,7 @@
     ],
     "declaration": true,
     "rootDir": "./src",
-    "outDir": "./lib/",
+    "outDir": "./dist/",
     "module": "CommonJS",
     "target": "ES2019",
     "experimentalDecorators": true,
@@ -18,5 +18,6 @@
     "allowJs": true,
     "lib": ["es2019", "ES2015.Proxy", "dom"]
   },
+
   "include": ["src/**/*", "test/**/*"]
 }
