--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "private": true,
   "version": "3.0.0",
+  "license": "UNLICENSED",
   "workspaces": {
     "packages": [
       "octopus-xd"
     ],
     "nohoist": [
-      "*"
+      "**"
     ]
   },
-  "scripts": {},
-  "dependencies": {
-    "dotenv": "8.2.0"
+  "scripts": {
+    "xd:unpack": "yarn workspace @avocode/octopus-xd unpack-xd-file",
+    "xd:clean-workdir": "yarn workspace @avocode/octopus-xd clean-workdir"
   },
+  "dependencies": {},
   "devDependencies": {
     "@types/node": "*",
     "typescript": "4.4.4"
