--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ manager-prod.jwt
 
 build/*
 
+dist
+
 # Created by https://www.gitignore.io/api/git,node,code,webstorm,sublimetext
 # Edit at https://www.gitignore.io/?templates=git,node,code,webstorm,sublimetext
 
