--- a/octopus-xd/package.json
+++ b/octopus-xd/package.json
@@ -2,14 +2,20 @@
   "name": "@avocode/octopus-xd",
   "version": "3.0.0-rc.1",
   "license": "UNLICENSED",
-  "main": "dist/index.js",
+  "main": "dist/src/index.js",
   "scripts": {
     "unpack-xd-file": "npx ts-node ./scripts/convert-every-artboard.ts",
-    "clean-workdir": "npx rimraf ./workdir/*"
+    "clean-workdir": "npx rimraf ./workdir/*",
+    "build": "npx tsc --build ./tsconfig.json",
+    "lint": "npx eslint ./src/*",
+    "prepare": "npx rimraf ./lib && yarn run build",
+    "watch": "npx tsc -w",
+    "test": "echo 'Tests are not implemented yet'"
   },
   "dependencies": {
     "@sentry/node": "6.14.0",
     "dotenv": "10.0.0",
+    "lodash": "^4.17.21",
     "paper": "0.12.4",
     "pino": "^6.7.0",
     "pino-pretty": "^4.3.0",
@@ -19,6 +25,7 @@
   "devDependencies": {
     "@avocode/octopus-ts": "^3.0.0-alpha.8",
     "@types/chalk": "^2.2.0",
+    "@types/lodash": "^4.14.178",
     "@types/node": "*",
     "@types/pino": "^6.3.3",
     "@types/uuid": "^8.3.1",
@@ -27,5 +34,8 @@
     "jest": "^27.3.1",
     "ts-node": "10.4.0"
   },
-  "description": "Octopus XD converter, converts .xd files to Octopus 3+ format."
+  "description": "Octopus XD converter, converts .xd files to Octopus 3+ format.",
+  "files": [
+    "dist/src"
+  ]
 }
