--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "scripts": {
     "xd:unpack": "yarn workspace @avocode/octopus-xd unpack-xd-file",
-    "xd:clean-workdir": "yarn workspace @avocode/octopus-xd clean-workdir"
+    "xd:clean-workdir": "yarn workspace @avocode/octopus-xd clean-workdir",
+    "xd:watch": "yarn workspace @avocode/octopus-xd watch"
   },
   "dependencies": {},
   "devDependencies": {
