--- a/octopus-xd/package.json
+++ b/octopus-xd/package.json
@@ -4,12 +4,13 @@
   "license": "UNLICENSED",
   "main": "dist/src/index.js",
   "scripts": {
-    "unpack-xd-file": "npx ts-node ./scripts/convert-every-artboard.ts",
-    "clean-workdir": "npx rimraf ./workdir/*",
-    "build": "npx tsc --build ./tsconfig.json",
-    "lint": "npx eslint ./src/*",
-    "prepare": "npx rimraf ./lib && yarn run build",
-    "watch": "npx tsc -w",
+    "start": "ts-node ./scripts/convert-every-artboard.ts",
+    "clean": "rimraf ./node_modules ./dist ./workdir",
+    "clean-workdir": "rimraf ./workdir/*",
+    "build": "tsc --build ./tsconfig.json",
+    "lint": "eslint ./src/*",
+    "prepare": "rimraf ./lib && yarn run build",
+    "watch": "tsc -w",
     "test": "echo 'Tests are not implemented yet'"
   },
   "dependencies": {
@@ -29,10 +30,15 @@
     "@types/node": "*",
     "@types/pino": "^6.3.3",
     "@types/uuid": "^8.3.1",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
     "chalk": "^4.1.2",
+    "eslint": "^8.6.0",
     "fflate": "^0.7.1",
     "jest": "^27.3.1",
-    "ts-node": "10.4.0"
+    "rimraf": "^3.0.2",
+    "ts-node": "10.4.0",
+    "typescript": "^4.5.4"
   },
   "description": "Octopus XD converter, converts .xd files to Octopus 3+ format.",
   "files": [
