--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     ]
   },
   "scripts": {
-    "xd:unpack": "yarn workspace @avocode/octopus-xd unpack-xd-file",
-    "xd:clean-workdir": "yarn workspace @avocode/octopus-xd clean-workdir",
-    "xd:watch": "yarn workspace @avocode/octopus-xd watch",
+    "xd:unpack": "yarn workspace @octopus/convertor-xd-octopus unpack-xd-file",
+    "xd:clean-workdir": "yarn workspace @octopus/convertor-xd-octopus clean-workdir",
+    "xd:watch": "yarn workspace @octopus/convertor-xd-octopus watch",
     "clean": "yarn workspaces run clean",
     "build": "yarn workspaces run build",
     "lint": "yarn workspaces run lint",
