--- a/octopus-psd/tsconfig.json
+++ b/octopus-psd/tsconfig.json
@@ -18,5 +18,8 @@
       "allowJs": true,
       "lib": ["es2019", "ES2015.Proxy", "dom"]
     },
-    "include": ["src/**/*", "test/**/*", "scripts"]
+    "include": ["src/**/*", "test/**/*", "scripts"],
+    "ts-node": {  
+      // "transpileOnly": true
+    }
   }
