fix typings and add clean

--- a/octopus-psd/tsconfig.json
+++ b/octopus-psd/tsconfig.json
@@ -16,10 +16,10 @@
       "moduleResolution": "node",
       "resolveJsonModule": true,
       "allowJs": true,
-      "lib": ["es2019", "ES2015.Proxy", "dom"]
+      "lib": ["es2019", "ES2015.Proxy", "dom"],
+      "paths": {
+        "@avocode/psd-parser": ["./src/typings/@avocode/psd-parser"]
+      }
     },
-    "include": ["src/**/*", "test/**/*", "scripts"],
-    "ts-node": {  
-      // "transpileOnly": true
-    }
+    "include": ["src/**/*", "test/**/*", "scripts"]
   }
