--- a/octopus-xd/package.json
+++ b/octopus-xd/package.json
@@ -5,6 +5,7 @@
   "main": "dist/src/index.js",
   "scripts": {
     "unpack-xd-file": "npx ts-node ./scripts/convert-every-artboard.ts",
+    "clean": "rimraf ./node_modules ./dist ./workdir",
     "clean-workdir": "npx rimraf ./workdir/*",
     "build": "npx tsc --build ./tsconfig.json",
     "lint": "npx eslint ./src/*",
