--- a/octopus-psd/package.json
+++ b/octopus-psd/package.json
@@ -14,7 +14,9 @@
     "test": "echo 'Tests are not implemented yet'"
   },
   "dependencies": {
+    "@avocode/psd-parser": "0.8.4",
     "@sentry/node": "6.14.0",
+    "chalk": "^4.1.2",
     "dotenv": "10.0.0",
     "lodash": "^4.17.21",
     "paper": "0.12.4",
@@ -25,16 +27,15 @@
   },
   "devDependencies": {
     "@avocode/octopus-ts": "^3.0.0-alpha.14",
-    "@avocode/psd-parser": "0.8.4",
     "@types/chalk": "^2.2.0",
     "@types/lodash": "^4.14.178",
     "@types/node": "*",
     "@types/pino": "^6.3.3",
     "@types/uuid": "^8.3.1",
-    "chalk": "^4.1.2",
-    "fflate": "^0.7.1",
     "jest": "^27.3.1",
-    "ts-node": "10.4.0"
+    "rimraf": "^3.0.2",
+    "ts-node": "10.4.0",
+    "typescript": "4.4.4"
   },
   "description": "Octopus PSD converter, converts .psd files to Octopus 3+ format.",
   "files": [
