--- a/package.json
+++ b/package.json
@@ -22,9 +22,6 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@types/node": "*",
-    "rimraf": "^3.0.2",
-    "ts-node": "^10.4.0",
-    "typescript": "4.4.4"
+    "rimraf": "^3.0.2"
   }
 }
