--- a/octopus-psd/package.json
+++ b/octopus-psd/package.json
@@ -32,6 +32,12 @@
     "@types/node": "*",
     "@types/pino": "^6.3.3",
     "@types/uuid": "^8.3.1",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^16.1.0",
+    "eslint-plugin-import": "^2.25.4",
     "jest": "^27.3.1",
     "rimraf": "^3.0.2",
     "ts-node": "10.4.0",
