wip: octopus-xd alpha version except positioning / matrices

--- a/octopus-xd/tsconfig.json
+++ b/octopus-xd/tsconfig.json
@@ -7,7 +7,7 @@
     ],
     "declaration": true,
     "rootDir": "./",
-    "outDir": "./dist/",
+    "outDir": "./lib/",
     "module": "CommonJS",
     "target": "ES2019",
     "experimentalDecorators": true,
