--- a/octopus-xd/package.json
+++ b/octopus-xd/package.json
@@ -34,7 +34,8 @@
     "chalk": "^4.1.2",
     "fflate": "^0.7.1",
     "jest": "^27.3.1",
-    "ts-node": "10.4.0"
+    "ts-node": "10.4.0",
+    "typescript": "4.4.4"
   },
   "description": "Octopus XD converter, converts .xd files to Octopus 3+ format.",
   "files": [
