--- a/octopus-psd/package.json
+++ b/octopus-psd/package.json
@@ -4,7 +4,8 @@
   "license": "UNLICENSED",
   "main": "dist/src/index.js",
   "scripts": {
-    "convert": "ts-node ./scripts/convert-artboard.ts",
+    "convert": "ts-node ./scripts/convert.ts",
+    "convert:render": "ts-node ./scripts/convert-and-render.ts",
     "build": "tsc --build ./tsconfig.json",
     "clean": "rimraf ./node_modules ./lib ./workdir",
     "clean-workdir": "rimraf ./workdir/*",
