setup input files

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "license": "UNLICENSED",
   "workspaces": {
     "packages": [
-      "octopus-xd"
+      "octopus-xd",
+      "octopus-ai"
     ],
     "nohoist": [
       "**"
