--- a/octopus-xd/package.json
+++ b/octopus-xd/package.json
@@ -5,7 +5,7 @@
   "main": "dist/src/index.js",
   "scripts": {
     "convert:all": "npx ts-node ./scripts/convert-all.ts",
-    "convert:all:render": "npx ts-node ./scripts/convert-all-and-render.ts",
+    "convert:all:render": "CONVERT_RENDER=1 npx ts-node ./scripts/convert-all.ts",
     "clean-workdir": "npx rimraf ./workdir/*",
     "build": "npx tsc --build ./tsconfig.json",
     "lint": "npx eslint ./src/*",
