--- a/octopus-xd/package.json
+++ b/octopus-xd/package.json
@@ -8,10 +8,12 @@
     "convert:all:render": "CONVERT_RENDER=1 npx ts-node ./scripts/convert-all.ts",
     "clean-workdir": "npx rimraf ./workdir/*",
     "build": "npx tsc --build ./tsconfig.json",
-    "lint": "npx eslint ./src/*",
     "prepare": "npx rimraf ./lib && yarn run build",
     "watch": "npx tsc -w",
-    "test": "echo 'Tests are not implemented yet'"
+    "test": "echo 'Tests are not implemented yet'",
+    "lint": "yarn run lint:prettier && yarn run lint:eslint",
+    "lint:eslint": "eslint . --ext .ts",
+    "lint:ptrettier": "prettier -c ."
   },
   "dependencies": {
     "@sentry/node": "6.14.0",
@@ -24,15 +26,21 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@avocode/octopus-ts": "3.0.0-alpha.15",
+    "@avocode/octopus-ts": "3.0.0-alpha.17",
     "@types/chalk": "^2.2.0",
     "@types/lodash": "^4.14.178",
     "@types/node": "*",
     "@types/pino": "^6.3.3",
     "@types/uuid": "^8.3.1",
+    "@typescript-eslint/eslint-plugin": "^4.25.0",
+    "@typescript-eslint/parser": "^4.25.0",
     "chalk": "^4.1.2",
+    "eslint": "7.27.0",
+    "eslint-plugin-jest": "24.3.6",
+    "eslint-plugin-jsdoc": "35.1.1",
     "fflate": "^0.7.1",
     "jest": "^27.3.1",
+    "prettier": "2.2.1",
     "ts-node": "10.4.0"
   },
   "description": "Octopus XD converter, converts .xd files to Octopus 3+ format.",
