octopus-common fixes

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "scripts": {
     "build": "yarn workspaces run build",
-    "clean": "rimraf ./node_modules & yarn workspaces run clean",
+    "clean": "rimraf ./node_modules && yarn workspaces run clean",
+    "clean-init": "yarn clean && yarn && yarn build",
     "lint": "yarn workspaces run lint",
     "test": "yarn workspaces run test",
     "xd:unpack": "yarn workspace @avocode/octopus-xd unpack-xd-file",
