--- a/octopus-psd/package.json
+++ b/octopus-psd/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@avocode/octopus-psd",
   "version": "3.0.0-rc.1",
+  "description": "Octopus PSD converter, converts .psd files to Octopus 3+ format.",
   "license": "UNLICENSED",
   "main": "dist/src/index.js",
   "scripts": {
@@ -14,6 +15,7 @@
     "test": "yarn jest"
   },
   "dependencies": {
+    "@avocode/octopus-common": "3.0.0-rc.6",
     "@avocode/psd-parser": "0.8.4",
     "@sentry/node": "6.14.0",
     "chalk": "^4.1.2",
@@ -36,10 +38,9 @@
     "jest": "^27.3.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^27.1.3",
-    "ts-node": "10.4.0",
+    "ts-node": "10.5.0",
     "typescript": "4.4.4"
   },
-  "description": "Octopus PSD converter, converts .psd files to Octopus 3+ format.",
   "files": [
     "dist/src"
   ]
