--- a/octopus-ai/package.json
+++ b/octopus-ai/package.json
@@ -14,7 +14,7 @@
   "author": "",
   "license": "UNLICENSED",
   "dependencies": {
-    "@avocode/octopus-common": "^2.2.10",
+    "@avocode/octopus-common": "3.0.0-rc.6",
     "@sentry/node": "6.14.0",
     "dotenv": "10.0.0",
     "lodash": "^4.17.21",
