--- a/octopus-common/package.json
+++ b/octopus-common/package.json
@@ -23,6 +23,7 @@
     "@types/node": "*",
     "@types/uuid": "^8.3.1",
     "jest": "^27.3.1",
+    "rimraf": "^3.0.2",
     "ts-node": "10.4.0",
     "typescript": "4.4.4"
   },
