--- a/octopus-xd/tsconfig.json
+++ b/octopus-xd/tsconfig.json
@@ -1,10 +1,7 @@
 {
   "compilerOptions": {
     "esModuleInterop": true,
-    "typeRoots": [
-      "node_modules/@types",
-      "src/typings"
-    ],
+    "typeRoots": ["node_modules/@types", "src/typings"],
     "declaration": true,
     "rootDir": "./",
     "outDir": "./lib/",
