--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,7 @@
   "plugins": ["jest", "prettier"],
   "settings": {},
   "rules": {
-    "prettier/prettier": "error",
+    "prettier/prettier": "warn",
     "@typescript-eslint/no-empty-interface": 0,
     "@typescript-eslint/no-unused-vars": [
       "warn",
