--- a/octopus-psd/package.json
+++ b/octopus-psd/package.json
@@ -20,6 +20,7 @@
     "@sentry/node": "6.14.0",
     "chalk": "^4.1.2",
     "dotenv": "10.0.0",
+    "image-size": "^1.0.1",
     "lodash": "^4.17.21",
     "paper": "0.12.15",
     "pino": "^6.7.0",
