--- a/octopus-psd/package.json
+++ b/octopus-psd/package.json
@@ -12,7 +12,8 @@
     "lint": "eslint ./src/* ./scripts/*",
     "prepare": "rimraf ./lib && yarn run build",
     "watch": "tsc -w",
-    "test": "yarn jest"
+    "test": "yarn jest",
+    "types:check": "tsc --noEmit"
   },
   "dependencies": {
     "@avocode/octopus-common": "3.0.0-rc.6",
