--- a/octopus-ai/package.json
+++ b/octopus-ai/package.json
@@ -7,9 +7,9 @@
     "create": "rm -rf temp/input && ./temp/parser/parse_ai_docker.sh temp/file/$FILE temp/input && npm run create:private",
     "create:private": "node node_modules/@avocode/ai-private-data-parser/dist/cli.js temp/file/$FILE temp/privateData/private.json",
     "convert:all": "npx ts-node ./scripts/convert-render.ts",
-    "convert:dev": "rm -rf workdir && npm run convert:render",
     "build": "npx tsc --build ./tsconfig.json",
-    "test": "\"echo 'Tests are not implemented yet'\""
+    "test": "\"echo 'Tests are not implemented yet'\"",
+    "render:test": "orchestrator4.run ./temp/octopustest/test.json"
   },
   "author": "",
   "license": "UNLICENSED",
