--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "xd:clean-workdir": "yarn workspace @avocode/octopus-xd clean-workdir",
     "xd:watch": "yarn workspace @avocode/octopus-xd watch",
     "lint": "yarn run lint:prettier && yarn run lint:eslint",
-    "lint:eslint": "eslint . --ext .ts",
+    "lint:eslint": "eslint . --ext .ts --max-warnings=0",
     "lint:prettier": "prettier -c .",
     "verify": "yarn lint && yarn test && yarn build"
   },
