--- a/octopus-ai/package.json
+++ b/octopus-ai/package.json
@@ -5,7 +5,7 @@
   "main": "dist/src/index.js",
   "scripts": {
     "create:cleanup": "rimraf temp/input",
-    "create:create": "./temp/parser/parse_ai_docker.sh temp/file/$FILE temp/input && npm run create:private",
+    "create:create": "./temp/parser/parse_ai_docker.sh temp/file/$FILE temp/input",
     "create": "yarn create:cleanup && yarn create:create && yarn create:private",
     "create:private": "node node_modules/@avocode/ai-private-data-parser/dist/cli.js temp/file/$FILE temp/privateData/private.json",
     "convert:all": "npx ts-node ./scripts/convert-render.ts",
