--- a/octopus-psd/package.json
+++ b/octopus-psd/package.json
@@ -6,6 +6,7 @@
   "main": "dist/src/index.js",
   "scripts": {
     "convert": "ts-node ./scripts/convert.ts",
+    "convert:dir": "ts-node ./scripts/convertDir.ts",
     "build": "tsc --build ./tsconfig.json",
     "clean": "rimraf ./node_modules ./lib ./workdir",
     "clean-workdir": "rimraf ./workdir/*",
