--- a/octopus-common/package.json
+++ b/octopus-common/package.json
@@ -12,7 +12,7 @@
     "clean-build": "rimraf ./dist && yarn run build",
     "watch": "tsc -w",
     "lint": "echo 'Linter is not implemented yet'",
-    "test": "echo 'Tests are not implemented yet'",
+    "test": "yarn jest",
     "types:check": "tsc --noEmit"
   },
   "dependencies": {
@@ -22,11 +22,13 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.0",
     "@types/lodash": "^4.14.178",
     "@types/node": "*",
     "@types/uuid": "^8.3.1",
     "jest": "^27.3.1",
     "rimraf": "^3.0.2",
+    "ts-jest": "^27.1.3",
     "ts-node": "10.4.0",
     "typescript": "4.4.4"
   },
