Part3 first commit

--- a/octopus-psd/.env.example
+++ b/octopus-psd/.env.example
@@ -1,4 +1,5 @@
 RENDERING_PATH=orchestrator4.run
+FONTS_PATH=/fonts
 SENTRY_DSN=
 LOG_LEVEL=debug # fatal | error | warn | info | debug | trace | silent
 NODE_ENV=debug # production | development | debug
