--- a/octopus-psd/package.json
+++ b/octopus-psd/package.json
@@ -38,6 +38,7 @@
     "@types/lodash": "^4.14.178",
     "@types/node": "*",
     "@types/pino": "^6.3.3",
+    "@types/rimraf": "^3.0.2",
     "@types/uuid": "^8.3.1",
     "jest": "^27.3.1",
     "rimraf": "^3.0.2",
