--- a/octopus-psd/package.json
+++ b/octopus-psd/package.json
@@ -5,6 +5,7 @@
   "license": "UNLICENSED",
   "main": "dist/src/index.js",
   "scripts": {
+    "convert": "ts-node ./scripts/psd.ts",
     "convert:local": "ts-node ./scripts/convert-local.ts",
     "convert:debug": "ts-node ./scripts/convert-debug.ts",
     "build": "tsc --build ./tsconfig.json",
@@ -27,6 +28,7 @@
     "paper": "0.12.15",
     "pino": "^6.7.0",
     "pino-pretty": "^4.3.0",
+    "psd": "^3.4.0",
     "read-pkg-up": "7.0.1",
     "time-stamp": "^2.2.0",
     "uuid": "^8.3.2"
