--- a/octopus-ai/package.json
+++ b/octopus-ai/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "create:cleanup": "rimraf temp/input",
     "create:create": "./temp/parser/parse_ai_docker.sh temp/file/$FILE temp/input",
-    "create": "yarn create:cleanup && yarn create:create && yarn create:private",
-    "create:private": "node node_modules/@avocode/ai-private-data-parser/dist/cli.js temp/file/$FILE temp/privateData/private.json",
+    "create": "yarn create:cleanup && yarn create:create && yarn create:additionalTextData",
+    "create:additionalTextData": "node node_modules/@avocode/ai-private-data-parser/dist/cli.js temp/file/$FILE temp/additionalTextData/additionalTextData.json",
     "convert:all": "npx ts-node ./scripts/convert-render.ts",
     "render:test": "npx ts-node ./scripts/render-test.ts",
     "test": "echo 'Tests are not implemented yet'",
@@ -15,7 +15,6 @@
     "clean": "rimraf ./node_modules ./lib ./workdir",
     "types:check": "tsc --noEmit",
     "watch": "tsc -w"
-
   },
   "author": "",
   "license": "UNLICENSED",
