--- a/octopus-common/tsconfig.json
+++ b/octopus-common/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "esModuleInterop": true,
-    "typeRoots": ["node_modules/@types", "src/typings"],
+    "typeRoots": ["node_modules/@types", "typings"],
     "declaration": true,
     "rootDir": "./src",
     "outDir": "./dist",
