--- a/octopus-psd/tsconfig.json
+++ b/octopus-psd/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "esModuleInterop": true,
-    "typeRoots": ["node_modules/@types", "src/typings"],
+    "typeRoots": ["node_modules/@types"],
     "declaration": true,
     "rootDir": "./",
     "outDir": "./lib/",
