add status to manifest entries; fix package scripts; add async queue/benchmarks into octopus-common; fix type resolving; fix parallel rendering

--- a/octopus-common/tsconfig.json
+++ b/octopus-common/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "esModuleInterop": true,
-    "typeRoots": ["node_modules/@types", "typings"],
+    "typeRoots": ["node_modules/@types"],
     "declaration": true,
     "rootDir": "./src",
     "outDir": "./dist",
