--- a/octopus-psd/package.json
+++ b/octopus-psd/package.json
@@ -11,13 +11,13 @@
     "clean": "rimraf ./node_modules ./lib ./workdir",
     "clean-workdir": "rimraf ./workdir/*",
     "lint": "eslint ./src/* ./scripts/*",
-    "prepare": "rimraf ./lib && yarn run build",
+    "prepack": "rimraf ./lib && yarn run build",
     "watch": "tsc -w",
     "test": "yarn jest",
     "types:check": "tsc --noEmit"
   },
   "dependencies": {
-    "@avocode/octopus-common": "3.0.0-rc.7",
+    "@avocode/octopus-common": "3.0.0-rc.15",
     "@avocode/psd-parser": "0.8.4",
     "@sentry/node": "6.14.0",
     "chalk": "^4.1.2",
