--- a/octopus-xd/package.json
+++ b/octopus-xd/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@avocode/octopus-xd",
-  "version": "3.0.0-rc.4",
+  "version": "3.0.0-rc.10",
   "license": "UNLICENSED",
   "main": "lib/src/index.js",
   "scripts": {
@@ -9,13 +9,14 @@
     "convert:all:debug": "npx ts-node ./scripts/convert-design-debug.ts",
     "clean:workdir": "npx rimraf ./workdir/*",
     "build": "npx tsc --build ./tsconfig.json",
-    "prepare": "npx rimraf ./lib && yarn run build",
+    "prepack": "npx rimraf ./lib && yarn run build",
     "watch": "npx tsc -w",
     "test": "echo 'Tests are not implemented yet'",
     "types:check": "tsc --noEmit"
   },
   "dependencies": {
-    "@avocode/octopus-common": "3.0.0-rc.11",
+    "@avocode/octopus-ts": "3.0.0-alpha.23",
+    "@avocode/octopus-common": "3.0.0-rc.15",
     "@sentry/node": "6.14.0",
     "dotenv": "10.0.0",
     "lodash": "^4.17.21",
@@ -27,7 +28,6 @@
     "fflate": "^0.7.1"
   },
   "devDependencies": {
-    "@avocode/octopus-ts": "3.0.0-alpha.23",
     "@types/chalk": "^2.2.0",
     "@types/lodash": "^4.14.178",
     "@types/node": "*",
