--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,10 +15,12 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": ["jest", "prettier"],
+  "plugins": ["jest", "simple-import-sort", "prettier"],
   "settings": {},
   "rules": {
     "prettier/prettier": "warn",
+    "simple-import-sort/imports": "warn",
+    "simple-import-sort/exports": "warn",
     "@typescript-eslint/no-empty-interface": 0,
     "@typescript-eslint/no-unused-vars": [
       "warn",
