--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,8 +19,8 @@
   "settings": {},
   "rules": {
     "prettier/prettier": "warn",
-    "simple-import-sort/imports": "warn",
-    "simple-import-sort/exports": "warn",
+    "simple-import-sort/imports": "off",
+    "simple-import-sort/exports": "off",
     "@typescript-eslint/no-empty-interface": 0,
     "@typescript-eslint/no-unused-vars": [
       "warn",
