--- a/octopus-common/package.json
+++ b/octopus-common/package.json
@@ -10,7 +10,7 @@
     "clean": "rimraf ./node_modules ./dist",
     "clean-build": "rimraf ./dist && yarn run build",
     "watch": "tsc -w",
-    "lint": "eslint ./src/*",
+    "lint": "eslint . --ext .ts --ignore-pattern 'dist/' --max-warnings=0",
     "test": "yarn jest",
     "types:check": "tsc --noEmit"
   },
