--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jest": "24.3.6",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-plugin-import": "^2.26.0",
     "prettier": "2.5.1",
     "rimraf": "^3.0.2",
     "typescript": "4.4.4"
