--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,7 +36,11 @@
       "warn",
       {
         "groups": ["builtin", "external", "internal", ["parent", "sibling", "index"], "object", "type"],
-        "newlines-between": "always"
+        "newlines-between": "always",
+        "alphabetize": {
+          "order": "asc",
+          "caseInsensitive": false
+        }
       }
     ],
     "@typescript-eslint/consistent-type-imports": [
