--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
       "octopus-common",
       "octopus-xd",
       "octopus-ai",
-      "octopus-psd"
+      "octopus-psd",
+      "figma-parser"
     ],
     "nohoist": [
       "**"
