--- a/octopus-fig/package.json
+++ b/octopus-fig/package.json
@@ -11,7 +11,7 @@
     "convert:debug": "ts-node ./scripts/convert-source-debug.ts",
     "convert:local": "ts-node ./scripts/convert-source-local.ts",
     "prepack": "rimraf ./lib && yarn run build",
-    "test": "echo 'Tests are not implemented yet'",
+    "test": "yarn jest",
     "types:check": "tsc --noEmit",
     "watch": "tsc -w"
   },
