adding fig parser - first part

--- a/octopus-fig/package.json
+++ b/octopus-fig/package.json
@@ -8,14 +8,17 @@
     "build": "tsc --build ./tsconfig.json",
     "clean:workdir": "rimraf ./workdir/*",
     "clean": "rimraf ./node_modules ./lib ./workdir",
-    "convert:debug": "ts-node ./scripts/convert-source-debug.ts",
-    "convert:local": "ts-node ./scripts/convert-source-local.ts",
+    "convert:api:debug": "ts-node ./scripts/convert-api-debug.ts",
+    "convert:api:local": "ts-node ./scripts/convert-api-local.ts",
+    "convert:source:debug": "ts-node ./scripts/convert-source-debug.ts",
+    "convert:source:local": "ts-node ./scripts/convert-source-local.ts",
     "prepack": "rimraf ./lib && yarn run build",
     "test": "yarn jest",
     "types:check": "tsc --noEmit",
     "watch": "tsc -w"
   },
   "dependencies": {
+    "@avocode/figma-parser": "3.0.0-rc.1",
     "@avocode/manifest-ts": "3.0.0-alpha.33",
     "@avocode/octopus-common": "3.0.0-rc.19",
     "@avocode/octopus-ts": "3.0.0-alpha.33",
