--- a/octopus-psd/.env.example
+++ b/octopus-psd/.env.example
@@ -1,4 +1,5 @@
-RENDERING_PATH=orchestrator4.run
+RENDERING_PATH=ode-renderer
+RENDERING_IGNORE_VALIDATION=false
 FONTS_PATH=/Users/your-user/path-to/fonts
 SENTRY_DSN=
 LOG_LEVEL=debug # fatal | error | warn | info | debug | trace | silent
