Connecting Figma Parser

--- a/octopus-fig/.env.example
+++ b/octopus-fig/.env.example
@@ -5,3 +5,4 @@ SENTRY_DSN=
 LOG_LEVEL=debug # fatal | error | warn | info | debug | trace | silent
 NODE_ENV=debug # production | development | debug
 CONVERT_RENDER=true
+API_TOKEN=
