--- a/octopus-fig/package.json
+++ b/octopus-fig/package.json
@@ -8,10 +8,8 @@
     "build": "tsc --build ./tsconfig.json",
     "clean:workdir": "rimraf ./workdir/*",
     "clean": "rimraf ./node_modules ./lib ./workdir",
-    "convert:api:debug": "ts-node ./scripts/convert-api-debug.ts",
-    "convert:api:local": "ts-node ./scripts/convert-api-local.ts",
-    "convert:source:debug": "ts-node ./scripts/convert-source-debug.ts",
-    "convert:source:local": "ts-node ./scripts/convert-source-local.ts",
+    "convert:debug": "ts-node ./scripts/convert-api-debug.ts",
+    "convert:local": "ts-node ./scripts/convert-api-local.ts",
     "parse": "ts-node ./scripts/test-parse.ts",
     "prepack": "rimraf ./lib && yarn run build",
     "test": "yarn jest",
@@ -19,7 +17,7 @@
     "watch": "tsc -w"
   },
   "dependencies": {
-    "@avocode/figma-parser": "3.0.0-rc.1",
+    "@avocode/figma-parser": "3.0.0-rc.2",
     "@avocode/manifest-ts": "3.0.0-alpha.33",
     "@avocode/octopus-common": "3.0.0-rc.19",
     "@avocode/octopus-ts": "3.0.0-alpha.33",
@@ -29,6 +27,7 @@
     "dotenv": "16.0.0",
     "image-size": "^1.0.1",
     "lodash": "^4.17.21",
+    "p-queue": "^6.6.2",
     "paper": "0.12.15",
     "pino": "^6.7.0",
     "pino-pretty": "^4.3.0",
