--- a/octopus-fig/package.json
+++ b/octopus-fig/package.json
@@ -24,6 +24,7 @@
     "@sentry/node": "6.14.0",
     "chalk": "^4.1.2",
     "dotenv": "16.0.0",
+    "image-size": "^1.0.1",
     "lodash": "^4.17.21",
     "p-queue": "^6.6.2",
     "paper": "0.12.15",
