--- a/octopus-xd/package.json
+++ b/octopus-xd/package.json
@@ -1,9 +1,11 @@
 {
   "name": "@avocode/octopus-xd",
-  "version": "3.0.0-rc.14",
+  "version": "3.0.0-rc.15",
   "license": "UNLICENSED",
   "main": "lib/src/index.js",
   "scripts": {
+    "bundle": "yarn run bundle:web",
+    "bundle:web": "npx vite build -c vite.web.js && npx vite build -c vite.web.worker.js",
     "clean": "npx rimraf ./node_modules ./lib ./workdir",
     "convert:all": "npx ts-node ./scripts/convert-design.ts",
     "convert:all:debug": "npx ts-node ./scripts/convert-design-debug.ts",
@@ -15,30 +17,33 @@
     "types:check": "tsc --noEmit"
   },
   "dependencies": {
-    "@avocode/octopus-ts": "3.0.0-alpha.33",
     "@avocode/manifest-ts": "3.0.0-alpha.33",
-    "@avocode/octopus-common": "3.0.0-rc.20",
-    "@sentry/node": "6.14.0",
+    "@avocode/octopus-common": "3.0.0-rc.21",
+    "@avocode/octopus-ts": "3.0.0-alpha.33",
+    "blueimp-md5": "^2.19.0",
     "dotenv": "16.0.0",
+    "fflate": "^0.7.1",
     "lodash": "^4.17.21",
     "paper": "0.12.4",
     "pino": "^6.7.0",
     "pino-pretty": "^4.3.0",
     "read-pkg-up": "7.0.1",
     "time-stamp": "^2.2.0",
-    "uuid": "^8.3.2",
-    "fflate": "^0.7.1"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^13.1.3",
     "@types/chalk": "^2.2.0",
     "@types/lodash": "^4.14.178",
     "@types/node": "*",
     "@types/pino": "^6.3.3",
     "@types/uuid": "^8.3.1",
+    "@types/blueimp-md5": "^2.18.0",
     "chalk": "^4.1.2",
     "jest": "^27.3.1",
     "ts-node": "10.5.0",
-    "typescript": "4.4.4"
+    "typescript": "4.4.4",
+    "vite": "^2.9.1"
   },
   "description": "Octopus XD converter, converts .xd files to Octopus 3+ format.",
   "files": [
