--- a/octopus-xd/package.json
+++ b/octopus-xd/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@avocode/octopus-xd",
-  "version": "3.0.0-rc.16",
+  "version": "3.0.0-rc.17",
   "license": "UNLICENSED",
   "main": "lib/src/index.js",
   "scripts": {
@@ -47,7 +47,8 @@
   },
   "description": "Octopus XD converter, converts .xd files to Octopus 3+ format.",
   "files": [
-    "lib/src"
+    "lib/src",
+    "lib/package.json"
   ],
   "exports": {
     "node": "./lib/src/index-node.js",
