--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,6 +43,7 @@
         }
       }
     ],
+    "import/no-unresolved": "off",
     "@typescript-eslint/consistent-type-imports": [
       "warn",
       {
