--- a/octopus-common/package.json
+++ b/octopus-common/package.json
@@ -6,6 +6,10 @@
   "type": "module",
   "exports": {
     ".": "./dist/index.js",
+    "./dist/utils/benchmark": {
+      "node": "./dist/utils/benchmark-node.js",
+      "default": "./dist/utils/benchmark-web.js"
+    },
     "./dist/*": "./dist/*.js"
   },
   "scripts": {
