initial browser version

--- a/octopus-fig/package.json
+++ b/octopus-fig/package.json
@@ -1,10 +1,12 @@
 {
   "name": "@avocode/octopus-fig",
-  "version": "3.0.0-rc.1",
+  "version": "3.0.0-rc.2",
   "description": "Octopus Figma converter, converts Figma designs to Octopus 3+ format.",
   "license": "UNLICENSED",
   "main": "dist/src/index.js",
   "scripts": {
+    "bundle": "yarn run bundle:web",
+    "bundle:web": "npx vite build -c vite.web.js && npx vite build -c vite.web.worker.js",
     "build": "tsc --build ./tsconfig.json",
     "clean:workdir": "rimraf ./workdir/*",
     "clean": "rimraf ./node_modules ./lib ./workdir",
@@ -17,11 +19,10 @@
     "watch": "tsc -w"
   },
   "dependencies": {
-    "@avocode/figma-parser": "3.0.0-rc.2",
+    "@avocode/figma-parser": "3.0.0-rc.4",
     "@avocode/manifest-ts": "3.0.0-alpha.33",
-    "@avocode/octopus-common": "3.0.0-rc.20",
+    "@avocode/octopus-common": "3.0.0-rc.22",
     "@avocode/octopus-ts": "3.0.0-alpha.33",
-    "@sentry/node": "6.14.0",
     "chalk": "^4.1.2",
     "dotenv": "16.0.0",
     "lodash": "^4.17.21",
@@ -29,8 +30,6 @@
     "paper": "0.12.15",
     "pino": "^6.7.0",
     "pino-pretty": "^4.3.0",
-    "read-pkg-up": "7.0.1",
-    "time-stamp": "^2.2.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
