--- a/.gitignore
+++ b/.gitignore
@@ -16,13 +16,14 @@ manager-prod.jwt
 build/*
 
 dist
-
-# Created by https://www.gitignore.io/api/git,node,code,webstorm,sublimetext
-# Edit at https://www.gitignore.io/?templates=git,node,code,webstorm,sublimetext
-
 output/
 lib/
 sample
+
+*/example-web/*.umd.js
+
+# Created by https://www.gitignore.io/api/git,node,code,webstorm,sublimetext
+# Edit at https://www.gitignore.io/?templates=git,node,code,webstorm,sublimetext
 
 ### Code ###
 .vscode/*
