--- a/octopus-ai/package.json
+++ b/octopus-ai/package.json
@@ -6,7 +6,7 @@
     "lib/src",
     "lib/package.json"
   ],
-  "main": "dist/src/index.js",
+  "main": "lib/src/index.js",
   "scripts": {
     "convert:debug": "ts-node ./scripts/convert-render-debug.ts",
     "convert:all": "ts-node ./scripts/convert-design.ts",
@@ -19,18 +19,19 @@
   "author": "",
   "license": "UNLICENSED",
   "dependencies": {
-    "@avocode/octopus-common": "3.0.0-rc.20",
-    "@opendesign/illustrator-parser-pdfcpu": "^1.0.0",
     "@avocode/manifest-ts": "3.0.0-alpha.33",
+    "@avocode/octopus-common": "3.0.0-rc.20",
+    "@avocode/octopus-ts": "3.0.0-alpha.33",
+    "@opendesign/illustrator-parser-pdfcpu": "^1.0.0",
+    "crc-32": "^1.2.2",
     "dotenv": "16.0.0",
     "lodash": "^4.17.21",
     "paper": "^0.12.15",
     "pino": "^6.7.0",
     "pino-pretty": "^4.3.0",
     "read-pkg-up": "7.0.1",
-    "uuid": "^8.3.2",
-    "@avocode/octopus-ts": "3.0.0-alpha.33",
-    "time-stamp": "^2.2.0"
+    "time-stamp": "^2.2.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/chalk": "^2.2.0",
