fix after code review part2

--- a/octopus-ai/package.json
+++ b/octopus-ai/package.json
@@ -20,7 +20,7 @@
   "license": "UNLICENSED",
   "dependencies": {
     "@avocode/manifest-ts": "3.0.0-alpha.33",
-    "@avocode/octopus-common": "3.0.0-rc.20",
+    "@avocode/octopus-common": "3.0.0-rc.22",
     "@avocode/octopus-ts": "3.0.0-alpha.33",
     "@opendesign/illustrator-parser-pdfcpu": "^1.0.0",
     "crc-32": "^1.2.2",
@@ -31,6 +31,7 @@
     "pino-pretty": "^4.3.0",
     "read-pkg-up": "7.0.1",
     "time-stamp": "^2.2.0",
+    "tslib": "^2.4.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
