--- a/octopus-ai/package.json
+++ b/octopus-ai/package.json
@@ -22,7 +22,7 @@
     "@avocode/manifest-ts": "3.0.0-alpha.33",
     "@avocode/octopus-common": "3.0.0-rc.23",
     "@avocode/octopus-ts": "3.0.0-alpha.33",
-    "@opendesign/illustrator-parser-pdfcpu": "^1.0.0",
+    "@opendesign/illustrator-parser-pdfcpu": "^1.0.1-0",
     "crc-32": "^1.2.2",
     "dotenv": "16.0.0",
     "lodash": "^4.17.21",
